--- a/src/index.pug
+++ b/src/index.pug
@@ -8,6 +8,7 @@ html(lang="en")
 	include UI_kit/form-elements/components/field/field
 	include UI_kit/form-elements/components/button/button
 	include UI_kit/form-elements/components/checkbox/checkbox
+	include UI_kit/form-elements/components/like/like
 	.form-elements
 		header.form-elements__header
 			img.form-elements__logo(src=require("root/images/logo_gray.svg").default, alt="logo")
