--- a/src/style.scss
+++ b/src/style.scss
@@ -2,6 +2,7 @@
 @import "~material-icons/iconfont/material-icons.scss";
 @import "./fonts/fonts";
 @import 'FEcomponents/field/field';
+@import 'FEcomponents/like/like';
 @import 'FEcomponents/button/button';
 @import 'FEcomponents/checkbox/checkbox';
 @import "root/UI_kit/cards/components/calendar/calendar";
