--- a/src/index.pug
+++ b/src/index.pug
@@ -24,6 +24,7 @@ html(lang="en")
 					+field({placeholder: "Email", arrow: true, label: true, label_text: "subscription text field", size: "medium"})
 		//- ---------------------------------------------------------------------------------------------------------------------------
 		//- mixin
+		.range-slider-wrapper
 		//- ---------------------------------------------------------------------------------------------------------------------------
 		//- .container
 		//- 	+dropdown({type: "default", list: ['спальни', 'кровати', 'ванные комнаты'], buttons: false, title: "dropdown", size: "default", id: 9})
