--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,7 @@
 @import 'FEcomponents/like/like';
 @import 'FEcomponents/button/button';
 @import 'FEcomponents/checkbox/checkbox';
+@import 'FEcomponents/range-slider/range-slider.scss';
 @import "root/UI_kit/cards/components/calendar/calendar";
 :root {
     font: normal normal .875em/1.2 Arial, Helvetica, sans-serif;
