--- a/src/UI_kit/form-elements/components/checkbox-list/checkbox-list.pug
+++ b/src/UI_kit/form-elements/components/checkbox-list/checkbox-list.pug
@@ -1,4 +1,4 @@
-include UI_kit/form-elements/components/checkbox/checkbox
+include ../checkbox/checkbox
 mixin checkbox-list(options = {name: "checkbox-list"})
 	-
 		const list = ["Завтрак", "Письменный стол", "Стул для кормления", "Кроватка", "Телевизор", "Шампунь"]
