--- a/src/UI_kit/form-elements/components/checkbox-rich/checkbox-rich.pug
+++ b/src/UI_kit/form-elements/components/checkbox-rich/checkbox-rich.pug
@@ -1,7 +1,7 @@
-include UI_kit/form-elements/components/checkbox/checkbox
+include ../checkbox/checkbox
 mixin checkbox-rich(options = {items: [], descriptions: [], title: "rich Checkbox Buttons"})
 	-
-		const items = options.items || ['Широкий коридор', 'Помощник для инвалидов'];
+		const items = options.items || ['Широкий коридор', 'Помощник для инвалидов']
 		const descriptions = options.descriptions || ['Ширина коридоров в номере не менее 91 см.', 'На 1 этаже вас встретит специалист  и проводит до номера.']
 	.checkbox-rich
 		span.checkbox-rich__title= options.title
