--- a/src/UI_kit/form-elements/components/like/like.pug
+++ b/src/UI_kit/form-elements/components/like/like.pug
@@ -1,4 +1,4 @@
-mixin like(options)
+mixin like(options = {checked: false, count: 12})
 	-
 		const likeExtraClasses = `like_checked-${options.checked}`
 	.like(class = likeExtraClasses)
