--- a/src/UI_kit/cards/components/find-room/find-room.scss
+++ b/src/UI_kit/cards/components/find-room/find-room.scss
@@ -1,38 +1,24 @@
 @import 'FEcomponents/dropdown/dropdown';
-
 .find-room {
-    background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    max-width: 304px;
-    padding: 29px 26px 10px 22px;
-    margin: 20px;
+	max-width: 381px;
+	padding: 39px 29px 27px 30px;
+	background: #FFFFFF;
+	border: 1px solid rgba(0, 0, 0, 0.12);
+	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	
+	&__title {
+	font: normal bold 24px/30px Montserrat;
+	color: #1F2041;
+	letter-spacing: -0.4px;
+	margin-bottom: 16px;
+	}
 
-    &__title {
-        font-family: Montserrat, Arial, sans-serif;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 20px;
-        line-height: 25px;
-        color: #1F2041;
-        letter-spacing: -0.8px;
-        margin-bottom: 14px;
-    }
+	&__dates {
+		margin-bottom: 16px;
+	}
 
-    &__dates {
-        padding-left: 1px;
-        margin-bottom: 15px;
-    }
-
-    &__guests {
-        padding-left: 1px;
-        margin-bottom: 25px;
-    }
-
-    &__find {
-        padding-left: 1px;
-        margin-bottom: 13px;
-    }
+	&__guests {
+		margin-bottom: 29px;
+	}
 }
