--- a/src/UI_kit/form-elements/form-elements.scss
+++ b/src/UI_kit/form-elements/form-elements.scss
@@ -1,5 +1,5 @@
 @import '~normalize.css';
-@import './fonts/fonts';
+@import 'root/fonts/fonts';
 @import 'FEcomponents/bullet-list/bullet-list';
 @import 'FEcomponents/button/button';
 @import 'FEcomponents/checkbox/checkbox';
