--- a/src/UI_kit/cards/components/booking/booking.scss
+++ b/src/UI_kit/cards/components/booking/booking.scss
@@ -1,163 +1,147 @@
 @import 'FEcomponents/dropdown/dropdown';
 @import 'FEcomponents/button/button';
-
 .booking {
-    $root: &;
-    background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.12);
-    box-sizing: border-box;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-    max-width: 304px;
-    margin: 25px;
-    padding: 36px 24px 5px 23px;
+	background: #FFFFFF;
+	border: 1px solid rgba(0, 0, 0, 0.12);
+	box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+	max-width: 381px;
+	padding: 42px 29px 28px 30px;
 
-    &__title {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 14px;
-        #{$root}__number {
-            display: flex;
-            font-family: Montserrat, Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: bold;
-            font-size: 16px;
-            line-height: 15px;
-            color: #1F2041;
-            letter-spacing: 0.5px;
-            #{$root}__number-icon {
-                font-size: 11px;
-                line-height: 19px;
-                margin-right: 3px;
-            }
-            #{$root}__type {
-                margin-left: -17px;
-            }
-        }
-        #{$root}__price {
-            font-family: Montserrat, Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: 700;
-            font-size: 12px;
-            line-height: 20px;
-            color: rgba(31, 32, 65, 0.5);
-            letter-spacing: -0.5px;
-            #{$root}__time {
-                font-size: 10px;
-                font-weight: 400;
-                letter-spacing: -0.1px;
-            }
-        }
-    }
+	&__title {
+		display: flex;
+    justify-content: space-between;
+		align-items: flex-end;
+		margin-bottom: 15px;
+		flex-flow: row wrap;
+	}
 
-    &__dates {
-        margin-bottom: 15px;
-    }
+	&__number {
+		font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 21px;
+    color: #1F2041;
+    display: inline-flex;
+    // align-items: center;
+	}
 
-    &__guests {
-        margin-bottom: 15px;
-    }
+	&__number-icon {
+		font-weight: normal;
+		font-size: 14px;
+		padding-top: 8px;
+		margin-right: 6px;
+	}
 
-    &__items {
-        margin-bottom: 22px;
+	&__type {
+		margin-left: 5px;
+    padding-top: 2px;
+	}
 
-        #{$root}__item {     
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 11px;
+	&__price {
+		font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 21px;
+    color: rgba(31, 32, 65, 0.5);
+    display: inline-block;
+	}
 
-            #{$root}__description {
-                display: flex;
-                justify-content: space-between;
-                width: 75%;
+	&__time {
+		font-weight: normal;
+    letter-spacing: -0.4px;
+    font-size: 13px;
+	}
 
-                #{$root}__description-text {
-                    font-family: Montserrat, Tahoma, Geneva, Verdana, sans-serif;
-                    font-weight: normal;
-                    font-size: 11px;
-                    line-height: 14.9px;
-                    color: rgba(31, 32, 65, 0.75);
-                    width: 95%;
-                    letter-spacing: 0.1px;
-                }
+	&__dates {
+		margin-bottom: 16px;
+	}
 
-                #{$root}__description-detail {
-                    font-family: Montserrat, Tahoma, Geneva, Verdana, sans-serif;
-                    font-weight: 700;
-                    font-size: 9px;
-                    line-height: 15px;
-                    height: 16px;
-                    text-align: center;
-                    color: rgba(31, 32, 65, 0.25);
-                    border: 1px solid rgba(31, 32, 65, 0.25);
-                    border-radius: 30px;
-                    padding: 1px 5px 3px 5px;
-                    cursor: help;
-                }
-            }
+	&__guests {
+		margin-bottom: 19px;
+	}
 
-            #{$root}__cost {
-                font-family: Montserrat, Tahoma, Geneva, Verdana, sans-serif;
-                font-weight: normal;
-                font-size: 11px;
-                line-height: 15px;
-                color: rgba(31, 32, 65, 0.75);
-                width: 25%;
-                text-align: end;
-            }
-        }
-    }
+	&__items {
+		padding-left: 1px;
+		margin-bottom: 27px;
+	}
 
-    &__total {
-        display: flex;
-        margin-bottom: 14px;
+	&__item {
+		display: flex;
+		justify-content: space-between;
+		flex-flow: row wrap;
+	}
 
-        #{$root}__total-text {
-            font-family: Montserrat, Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: bold;
-            font-size: 16px;
-            line-height: 24px;
-            color: #1F2041;
-            letter-spacing: -0.7px;
-            padding-right: 6px;
-        }
+	&__item:not(:last-of-type) {
+		margin-bottom: 13px;
+	}
 
-        #{$root}__total-line {
-            border-bottom: 1px dashed rgba(31, 32, 65, 0.25);
-            width: 57%;
-            height: 17px;
-        }
+	&__description {
+		flex-basis: 237px;
+		position: relative;
+	}
 
-        #{$root}__total-cost {
-            font-family: Montserrat, Tahoma, Geneva, Verdana, sans-serif;
-            font-weight: bold;
-            font-size: 13px;
-            line-height: 24px;
-            color: #1F2041;
-            letter-spacing: 0.2px;
-            padding-left: 3px;
-        }
-    }
+	&__description-detail {
+		font: normal bold 12px/18px Montserrat;
+		width: 19px;
+    height: 20px;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    color: rgba(31, 32, 65, 0.25);
+    border-radius: 10px;
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center;
+	}
 
-    &__total-text {
-        font-family: Montserrat, Tahoma, Geneva, Verdana, sans-serif;
-        font-weight: bold;
-        font-size: 19px;
-        line-height: 24px;
-        color: #1F2041;
-    }
+	&__description-text {
+		font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 21.5px;
+    color: rgba(31, 32, 65, 0.75);
+	}
 
-    &__total-cost {
-        font-family: Montserrat, Tahoma, Geneva, Verdana, sans-serif;
-        font-weight: bold;
-        font-size: 19px;
-        line-height: 24px;
-        color: #1F2041;
-    }
+	&__cost {
+		font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    color: rgba(31, 32, 65, 0.75);
+	}
 
-    &__total-line {
-        border-bottom: 1px dashed rgba(31, 32, 65, 0.25);
-    }
+	&__total {
+		display: flex;
+		justify-content: space-between;
+		margin-bottom: 19px;
+		flex-flow: row wrap;
+	}
 
-    &__btn {
-        margin-bottom: 18px;
-    }
+	&__total-text {
+		font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 19px;
+    line-height: 24px;
+    color: #1F2041;
+	}
+
+	&__total-line {
+		border-bottom: 1px dashed rgba(31, 32, 65, 0.25);
+    min-width: 174px;
+    height: 18px;
+	}
+
+	&__total-cost {
+		font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 17px;
+    line-height: 24px;
+    color: #1F2041;
+	}
 }
