--- a/src/UI_kit/form-elements/components/button/button.scss
+++ b/src/UI_kit/form-elements/components/button/button.scss
@@ -72,6 +72,10 @@
 		letter-spacing: -0.2px;
 	}
 
+	&__link_theme-none {
+		line-height: 14px;
+	}
+
 	&__link_color-white {
 		color: #FFFFFF;
 	}	
