--- a/src/UI_kit/form-elements/components/dropdown/dropdown.scss
+++ b/src/UI_kit/form-elements/components/dropdown/dropdown.scss
@@ -120,7 +120,7 @@
 		border-radius: 0.2em;
 		border-top-left-radius: 0px;
     border-top-right-radius: 0px;
-    padding: 2.5px 6px 0px 14px;
+    padding: 2.5px 6px 10px 14px;
     overflow: hidden;
 		background: #FFFFFF;
 		z-index: 999;
@@ -202,6 +202,7 @@
 		display: flex;
 		flex-flow: row wrap;
 		justify-content: flex-end;
+		margin-top: 15px;
 	}
 
 	&__buttons-wrapper_justify_content-space-between {
