--- a/src/UI_kit/cards/components/login/login.pug
+++ b/src/UI_kit/cards/components/login/login.pug
@@ -1,15 +1,15 @@
 include UI_kit/form-elements/components/button/button
 include UI_kit/form-elements/components/field/field
 mixin login(options = {title: "Войти"})
-    .login
-        .login__title= options.title
-        .login__email
-            +field({type: "email", placeholder: "Email", size: 'large'})
-        .login__password
-            +field({type: "password", placeholder: "Пароль", size: 'large'})
-        .login__login-btn
-            +button({theme: 'full', size: 'large', arrow: true, text: "Войти", textColor: "white"})
-        .login__footer
-            span.login__footer-text Нет аккаунта на Toxin?
-            .logun__footer-create
-                +button({theme: "transparent", size: "small", arrow: false, text: "создать", textColor: "purple"})
+	.login
+		.login__title= options.title
+		.login__email
+			+field({type: "email", placeholder: "Email", size: 'large'})
+		.login__password
+			+field({type: "password", placeholder: "Пароль", size: 'large'})
+		.login__login-button
+			+button({theme: 'full', size: 'large', arrow: true, link_text: "Войти", color: "white"})
+		.login__footer
+			span.login__footer-text Нет аккаунта на Toxin?
+			.login__footer-create
+				+button({theme: "transparent", size: "small", arrow: false, link_text: "создать", color: "purple"})
