--- a/src/UI_kit/cards/components/calendar/calendar.scss
+++ b/src/UI_kit/cards/components/calendar/calendar.scss
@@ -1,6 +1,3 @@
-// @import "~jquery-ui/themes/base/theme.css";
-// @import "~jquery-ui/themes/base/core.css";
-// @import "~jquery-ui/themes/base/datepicker.css";
 @import 'air-datepicker/dist/css/datepicker.min.css';
 
 *,
@@ -17,7 +14,7 @@
 }
 .datepicker-inline {
     position: relative;
-
+    max-width: 320px;
     .datepicker {
         position: absolute;
         top: 5px;
@@ -30,72 +27,69 @@
         width: 100%;
         
         &--content {
-            padding: 3px 0px 0px 11px;
+            padding: 3px 0px 0px 13px;
         }
 
         &--nav {
             border: none;
-            margin-bottom: 18px;
-            margin-top: 6px;
+            margin-bottom: 23px;
+            margin-top: 11px;
 
             &-action {
-                width: 38px;
+                width: 56px;
             }
             &-title {
                 font-family: Montserrat;
                 font-weight: bold;
-                font-size: 15px;
+                font-size: 17px;
                 line-height: 24px;
                 text-align: center;
                 color: #1F2041;
-                letter-spacing: -0.5px;
+                letter-spacing: 0.5px;
+                padding: 0 8px 0px 13px;
 
                 i {
                     color: #1F2041;
                 }
             }
+        }
 
-            &-action svg {
-                width: 14px;
-                height: 14px;
-            }
-
-            &-action svg path {
-                stroke: #BC9CFF;
-                fill: #BC9CFF;
-                stroke-width: 0.5px;
-            }
+        &__arrow {
+            width: 20px;
+            height: 17px;
+            stroke: #BC9CFF;
+            fill: #BC9CFF;
+            stroke-width: 0.5px;
         }
 
         &--days-names {
-            width: 92%;
-            margin: 0 5px 8px 5px;
+            max-width: 280px;
+            padding: 0px 3px 0px 8px;
+            margin-bottom: 13px;
         }
 
         &--day-name {
             font-family: Montserrat;
             font-weight: bold;
-            font-size: 9px;
+            font-size: 11px;
             line-height: 15px;
             color: #BC9CFF;
+            text-transform: none;
         }
 
         &--cells {
-            padding-left: 5px;
-            padding-right: 5px;
+            padding: 0px 0px 0px 8px;
         }
 
         &--cell {
             font-family: Montserrat;
             font-weight: normal;
-            font-size: 10px;
+            font-size: 12px;
             line-height: 15px;
             color: rgba(31, 32, 65, 0.5);
-            height: 32.4px;
-
             &-day {
-                width: 13.66%;
-
+							height: 40px;
+							width: 40px;
                 &.-focus- {
                     border-radius: 30px;
                     border: 0;
@@ -155,12 +149,15 @@
             border: none;
             font-family: Montserrat;
             font-weight: bold;
-            font-size: 10px;
+            font-size: 11px;
             line-height: 15px;
             text-transform: uppercase;
+            letter-spacing: 0.8px;
+            margin-top: 12px;
+            margin-bottom: 5px;
+            padding: 0px 5px 4px 0px;
 
             span[data-action="apply"] {
-                margin-right: 7px;
                 color: #BC9CFF;
             }
 
@@ -170,13 +167,9 @@
             }
         }
 
-        &--button {
-            height: 35px;
-        }
-
         &--button:hover {
             opacity: .5;
-            background: none;
+						background: none;
         }
     }
 }   
