--- a/src/UI_kit/cards/components/room/room.pug
+++ b/src/UI_kit/cards/components/room/room.pug
@@ -1,22 +1,34 @@
 include UI_kit/form-elements/components/button/button
 include UI_kit/form-elements/components/rate/rate
-mixin room(options = {type: true})
-    .room
-        .room__preview
-            img.room__preview-img(src=require("root/images/room_1.jpg").default, alt="room img")
-        .room__info
-            .room__number
-                span.room__info-icon №
-                |888
-            -if(options.type)
-                .room__type
-                    +button({theme: "none", text: "люкс", textColor: "purple", size: "small"})
-            .room__price
-                |9 990₽ 
-                span.room__price-time в сутки
-        .room__characteristic
-            .room__rate
-                +rate({amount: 5, fill: 5})
-            .room__review
-                span.room__review-number 145
-                span.room__review-text Отзывов
+mixin room(options = {img: "room_1", price: "9 990₽", comments: 145, number: 888, lux: true, links: 4, fill: 4, checked: 0})
+	.room
+		.room__preview
+			a.room__preview-link(href="#")
+				img.room__preview-img(src=require(`root/images/${options.img}.jpg`).default, alt="room")
+			a.room__prev(href="")
+				svg.room__prev-img(width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg")
+					path(d="M11.3301 0.578125L12.7363 1.98438L6.73633 7.98438L0.736328 1.98438L2.14258 0.578125L6.73633 5.17188L11.3301 0.578125Z" fill="#fff" fill-opacity="1")
+			a.room__next(href="")
+				svg.room__next-img(width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg")
+					path(d="M11.3301 0.578125L12.7363 1.98438L6.73633 7.98438L0.736328 1.98438L2.14258 0.578125L6.73633 5.17188L11.3301 0.578125Z" fill="#fff" fill-opacity="1")
+			.room__links
+				-for(let i = 0; i < options.links; i++)
+					if (i === options.checked)
+						a.room__link(href="" class="room__link_checked")
+					else
+						a.room__link(href="")
+		.room__info
+			.room__number
+				span.room__info-icon №
+				=options.number
+			-if(options.lux)
+				.room__type
+					+button({theme: "none", link_text: "люкс", color: "purple", size: "small"})
+			.room__price= options.price
+				span.room__price-time в сутки
+		.room__review
+			.room__rate
+				+rate({count: 5, fill: options.fill})
+			.room__comments
+				span.room__comments-number= options.comments
+				span.room__comments-text Отзывов
