--- a/src/style.scss
+++ b/src/style.scss
@@ -15,7 +15,7 @@
 @import 'FEcomponents/review/review';
 @import 'FEcomponents/room-details/room-details';
 @import 'FEcomponents/toggle/toggle';
-@import "root/UI_kit/cards/components/calendar/calendar";
+// @import "root/UI_kit/cards/components/calendar/calendar";
 
 :root {
     font: normal normal .875em/1.2 Arial, Helvetica, sans-serif;
