minor changes: refactored dropdown, calendar. maior changes: added html and styles for the cards page.

--- a/src/UI_kit/cards/components/calendar/calendar.scss
+++ b/src/UI_kit/cards/components/calendar/calendar.scss
@@ -14,6 +14,7 @@
 }
 .datepicker-inline {
     position: relative;
+    min-width: 320px;
     max-width: 320px;
     .datepicker {
         position: absolute;
