--- a/src/index.pug
+++ b/src/index.pug
@@ -1,9 +1,9 @@
 include UI_kit/form-elements/components/bullet-list/bullet-list
-include UI_kit/form-elements/components/button/button
+//- include UI_kit/form-elements/components/button/button
 include UI_kit/form-elements/components/checkbox/checkbox
 include UI_kit/form-elements/components/checkbox-list/checkbox-list
 include UI_kit/form-elements/components/checkbox-rich/checkbox-rich
-include UI_kit/form-elements/components/dropdown/dropdown
+//- include UI_kit/form-elements/components/dropdown/dropdown
 include UI_kit/form-elements/components/field/field
 include UI_kit/form-elements/components/like/like
 include UI_kit/form-elements/components/pagination/pagination
@@ -12,6 +12,11 @@ include UI_kit/form-elements/components/rate/rate
 include UI_kit/form-elements/components/room-details/room-details
 include UI_kit/form-elements/components/toggle/toggle
 include UI_kit/form-elements/components/review/review
+include /UI_kit/cards/components/find-room/find-room
+include /UI_kit/cards/components/booking/booking
+include /UI_kit/cards/components/registration/registration
+include /UI_kit/cards/components/login/login
+include /UI_kit/cards/components/room/room
 <!DOCTYPE html>
 html(lang="en")
 	head
