--- a/src/style.scss
+++ b/src/style.scss
@@ -16,7 +16,11 @@
 @import 'FEcomponents/room-details/room-details';
 @import 'FEcomponents/toggle/toggle';
 // @import "root/UI_kit/cards/components/calendar/calendar";
-
+@import '/UI_kit/cards/components/find-room/find-room';
+@import '/UI_kit/cards/components/booking/booking';
+@import '/UI_kit/cards/components/registration/registration';
+@import '/UI_kit/cards/components/login/login';
+@import '/UI_kit/cards/components/room/room';
 :root {
     font: normal normal .875em/1.2 Arial, Helvetica, sans-serif;
     box-sizing: border-box;
